Updated template for presentations

--- a/templates/_index.html
+++ b/templates/_index.html
@@ -15,15 +15,22 @@
 <body>
     <div class="reveal">
         <div class="slides">
+
             <section>
-                <h2>
-                    <u>React For Beginners by Itera</u>
-                </h2>
+                <h1>Free React course for Beginners</h1>
+            </section>
+
+            <section>
+                <h1>
+                    L0 - Introduction
+                </h1>
                 <h4>
-                    L0 - Introduction    
+                    <u>
+                        React For Beginners by Itera
+                    </u>
                 </h4>
             </section>
-          </div>
+        </div>
     </div>
     <script src="./index.js" type="module"></script>
 </body>
