Added code to handle long lists (better avoid this)

--- a/presentations/shared/helpers.css
+++ b/presentations/shared/helpers.css
@@ -9,3 +9,20 @@ pre>code.pre-code-l {
 .reveal .green{
     color: #17ff2e;
 }
+
+.scrollable-slide {
+    height: 100%;
+    overflow-y: auto !important;
+}
+::-webkit-scrollbar {
+    width: 6px;
+}
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+::-webkit-scrollbar-thumb {
+  background-color: #333;
+}
+::-webkit-scrollbar-corner {
+  background-color: #333;
+}   
