--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -11,6 +11,8 @@
     <meta name="twitter:card" content="summary"></meta>
     <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short"></meta>
     <meta name="twitter:creator" content="drag137"></meta>
+    <meta name="twitter:title" content="React For Beginners - {{title}}"></meta>
+    <meta property="og:title" content="React For Beginners - {{title}}">
     <meta name="author" content="drag13"></meta>
     <meta name="robots" content="index follow"></meta>
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css">
