--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="react free learning course beginners"></meta>
     <meta name="twitter:card" content="summary"></meta>
     <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short"></meta>
-    <meta name="twitter:creator" content="drag137"></meta>
+    <meta name="twitter:creator" content="@drag137"></meta>
     <meta name="twitter:title" content="React For Beginners - {{title}}"></meta>
     <meta property="og:title" content="React For Beginners - {{title}}">
     <meta name="author" content="drag13"></meta>
