--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -9,9 +9,11 @@
     <meta name="description" content="Free learning course - React: {{title}}"></meta>
     <meta name="keywords" content="react free learning course beginners"></meta>
     <meta name="twitter:card" content="summary"></meta>
+    <meta name="twitter:title" content="React For Beginners - {{title}}"></meta>
     <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short"></meta>
     <meta name="twitter:creator" content="@drag137"></meta>
-    <meta name="twitter:title" content="React For Beginners - {{title}}"></meta>
+    <meta name="twitter:image" content="../shared/imgs/title.png"></meta>
+    <meta property="og:image" content="../shared/imgs/title.png"> </meta>
     <meta property="og:title" content="React For Beginners - {{title}}">
     <meta name="author" content="drag13"></meta>
     <meta name="robots" content="index follow"></meta>
@@ -26,7 +28,9 @@
         <div class="slides">
 
             <section>
-                <h1>Free React course for Beginners</h1>
+                <h1 style="color: #fff; line-height:1em; overflow-wrap: anywhere; background: linear-gradient(to bottom, #015bbb 50%, #fed500 50%);">
+                    <div>Free React Course</div>
+                    <div>For Beginners</div></h1>
             </section>
 
             <section>
