fixed issue with wrong link to body

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -65,7 +65,7 @@
             </section>
             {{/prerequisite.length}}
 
-            <include src="./{{i}}/body.html"></include>
+            <include src="./{{name}}/body.html"></include>
 
             {{#hometask.length}}
             <section>
