Added footer with sponsors

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -90,7 +90,14 @@
             {{/links.length}}
         </div>
     </div>
+
     <script src="../shared/init.js" type="module"></script>
+
+    <footer class="footer">
+        <a href="https://itera.com">
+            <img src="../shared/imgs/Itera-logo-white-fuchsia.jpg" alt="https://itera.com">
+        </a>
+    </footer>
 </body>
 
 </html>
