--- a/presentations/shared/helpers.css
+++ b/presentations/shared/helpers.css
@@ -1,3 +1,7 @@
+:root {
+  --footer-size: 2rem;
+}
+
 .left {
   text-align: left;
 }
@@ -14,6 +18,7 @@ pre > code.pre-code-l {
   height: 100%;
   overflow-y: auto !important;
 }
+
 ::-webkit-scrollbar {
   width: 6px;
 }
@@ -25,6 +30,19 @@ pre > code.pre-code-l {
 }
 ::-webkit-scrollbar-corner {
   background-color: #333;
+}
+
+.footer {
+  position: absolute;
+  display: flex;
+  bottom: 0;
+  max-height: var(--footer-size, 32px);
+  width: 100%;
+  flex-direction: row-reverse;
+}
+
+.footer img {
+  max-height: var(--footer-size, 32px);
 }
 
 .ukraine {
