--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -1,103 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React For Beginners - {{title}}</title>
-    <meta name="description" content="Free learning course - React: {{title}}">
-    </meta>
-    <meta name="keywords" content="react free learning course beginners">
-    </meta>
-    <meta name="twitter:card" content="summary">
-    </meta>
-    <meta name="twitter:title" content="React For Beginners - {{title}}">
-    </meta>
-    <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short">
-    </meta>
-    <meta name="twitter:creator" content="@drag137">
-    </meta>
-    <meta name="twitter:image" content="../shared/imgs/title.png">
-    </meta>
-    <meta property="og:image" content="../shared/imgs/title.png">
-    </meta>
-    <meta property="og:title" content="React For Beginners - {{title}}">
-    <meta name="author" content="drag13">
-    </meta>
-    <meta name="robots" content="index follow">
-    </meta>
-    <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css">
-    <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css">
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css">
-    <link rel="stylesheet" href="../shared/helpers.css">
-</head>
+    <meta name="description" content="Free learning course - React: {{title}}" />
+    <meta name="keywords" content="react free learning course beginners" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="React For Beginners - {{title}}" />
+    <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short/{{name}}" />
+    <meta name="twitter:creator" content="@drag137" />
+    <meta name="twitter:image" content="../shared/imgs/title.png" />
+    <meta property="og:image" content="../shared/imgs/title.png" />
+    <meta property="og:title" content="React For Beginners - {{title}}" />
+    <meta name="og:site_name" content="React For Beginners - {{title}}">
+    <meta name="application-name" content="React For Beginners - {{title}}">
+    <meta name="author" content="drag13" />
+    <meta name="robots" content="index follow" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
+    <link rel="stylesheet" href="../shared/helpers.css" />
+  </head>
 
-<body>
+  <body>
     <div class="reveal">
-        <div class="slides">
+      <div class="slides">
+        <section>
+          <h1 class="ukraine">
+            Free React Course <br />
+            For Beginners
+          </h1>
+        </section>
 
-            <section>
-                <h1 class="ukraine">
-                    Free React Course <br /> For Beginners
-                </h1>
-            </section>
+        <section>
+          <h1>L{{i}} - {{title}}</h1>
+          <h4>
+            <u> React For Beginners by Itera </u>
+          </h4>
+        </section>
 
-            <section>
-                <h1>
-                    L{{i}} - {{title}}
-                </h1>
-                <h4>
-                    <u>
-                        React For Beginners by Itera
-                    </u>
-                </h4>
-            </section>
+        {{#prerequisite.length}}
+        <section>
+          <h2>Prerequisite</h2>
+          <ul>
+            {{#prerequisite}}
+            <li>{{{.}}}</li>
+            {{/prerequisite}}
+          </ul>
+        </section>
+        {{/prerequisite.length}}
 
-            {{#prerequisite.length}}
-            <section>
-                <h2>Prerequisite</h2>
-                <ul>
-                    {{#prerequisite}}
-                    <li>{{{.}}}</li>
-                    {{/prerequisite}}
-                </ul>
-            </section>
-            {{/prerequisite.length}}
+        <include src="./{{name}}/body.html"></include>
 
-            <include src="./{{name}}/body.html"></include>
-
-            {{#hometask.length}}
-            <section>
-                <h2>Home task</h2>
-                <ul>
-                    {{#hometask}}
-                    <li>{{{.}}}</li>
-                    {{/hometask}}
-                </ul>
-            </section>
-            {{/hometask.length}}
-
-            {{#links.length}}
-            <section>
-                <h2>Useful links</h2>
-                <ul>
-                    {{#links}}
-                    <li> <a target="_blank" rel="noreferrer noopener" href="{{{1}}}">{{0}}</a> </li>
-                    {{/links}}
-                </ul>
-            </section>
-            {{/links.length}}
-        </div>
+        {{#hometask.length}}
+        <section>
+          <h2>Home task</h2>
+          <ul>
+            {{#hometask}}
+            <li>{{{.}}}</li>
+            {{/hometask}}
+          </ul>
+        </section>
+        {{/hometask.length}} {{#links.length}}
+        <section>
+          <h2>Useful links</h2>
+          <ul>
+            {{#links}}
+            <li><a target="_blank" rel="noreferrer noopener" href="{{{1}}}">{{0}}</a></li>
+            {{/links}}
+          </ul>
+        </section>
+        {{/links.length}}
+      </div>
     </div>
 
     <script src="../shared/init.js" type="module"></script>
 
     <footer class="footer">
-        <a href="https://itera.com">
-            <img src="../shared/imgs/Itera-logo-white-fuchsia.jpg" alt="https://itera.com">
-        </a>
+      <a href="https://itera.com">
+        <img src="../shared/imgs/Itera-logo-white-fuchsia.jpg" alt="https://itera.com" />
+      </a>
     </footer>
-</body>
-
+  </body>
 </html>
