layout tweaks in a name of twitter

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -12,14 +12,14 @@
     <meta name="twitter:title" content="React For Beginners - {{title}}" />
     <meta
       name="twitter:site"
-      content="https://github.com/Drag13/react-learning-course-short/{{name}}"
+      content="https://github.com/Drag13/react-learning-course-short/{{name}}/index.html"
     />
     <meta name="twitter:creator" content="@drag137" />
     <meta name="twitter:image" content="../shared/imgs/title.png" />
     <meta property="og:image" content="../shared/imgs/title.png" />
     <meta property="og:title" content="React For Beginners - {{title}}" />
     <meta name="og:site_name" content="React For Beginners - {{title}}" />
-    <meta property="og:url" content="https://drag13.io/" />
+    <meta property="og:url" content="https://drag13.io/react-learning-course-short/{{name}}/index.htnl" />
     <meta property="og:type" content="website" />
     <meta name="application-name" content="React For Beginners - {{title}}" />
     <meta name="author" content="drag13" />
