--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -47,6 +47,7 @@
           </h4>
         </section>
 
+        {{#keyPoints.length}}
         <section>
           <h2>Key Points</h2>
           <ul>
@@ -55,6 +56,7 @@
             {{/keyPoints}}
           </ul>
         </section>
+        {{/keyPoints.length}}
 
         <include src="./{{name}}/body.html"></include>
 
