--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -62,10 +62,10 @@
 
         {{#takeaways.length}}
         <section>
-          <h2>Home task</h2>
-          <ul>
+          <h2>Takeaway</h2>
+          <ul >
             {{#takeaways}}
-            <li>{{{.}}}</li>
+            <li class="fragment fade-up">{{{.}}}</li>
             {{/takeaways}}
           </ul>
         </section>
