WIP on the first lecture

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -51,7 +51,7 @@
           <h2>Key Points</h2>
           <ul>
             {{#keyPoints}}
-            <li>{{{.}}}</li>
+            <li class="fragment fade-up">{{{.}}}</li>
             {{/keyPoints}}
           </ul>
         </section>
