Turned Itera to be link

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -42,7 +42,7 @@
         <section>
           <h1>L{{i}} - {{title}}</h1>
           <h4>
-            <u> React For Beginners by Itera </u>
+            <u> React For Beginners by <a href="https://itera.com/">Itera</a>  </u>
           </h4>
         </section>
 
